# Third-kursovoy-SAA

./: .gitignore  README.md  db_manager.py  main.py  pyproject.toml  requirements.txt
src/: hh_abc.py  hh_api.py
